# Ave

./: .gitignore  Dockerfile  docker-compose.yml  env.yaml  pyproject.toml  requirements.txt
.github/workflows/: main_ave-backend.yml
alembic/: env.py
alembic/versions/: 0560450e8339_add_verification_code_table.py  1798175b110d_seeding_college_and_department_tables.py  2124b3ca5c99_add_fields_to_user_table.py  349b4607f7e9_removed_useless_column.py  450ee16ecfd5_add_refresh_token_table.py  59e5843a7a0f_add_extra_fields_unto_users_table_add_.py  6a49ab1492f7_seed_colcomp_departments.py  860d0267c93d_added_is_verified_field_to_user_model.py  9308f1906dac_geofence_timestamp.py  954a9914733f_user_table_refactor.py  96fea91100cc_table_to_keep_track_of_used_password_.py  97a3b6fbbfa6_removed_useless_models.py  9da1d9d4b82a_forein_key_constraints.py  aa9dab609fe4_update_datetime_fields.py  af1f69a98614_table_to_keep_track_of_used_password_.py  e53b6d68f86f_remove_foreign_key.py  e7f292795b30_init.py  f2eb54c34c61_add_college_id_field_to_department_table.py
app/: common.py  main.py  settings.py
app/auth/: APIKeys.py  AuthRouter.py  api_keys.py  auth_router.py
app/database/: __init__.py  database.py
app/email/: __init__.py  email_sender.py
app/exceptions/: GeofenceExceptions.py  UserExceptions.py  __init__.py  geofence_exceptions.py  user_exceptions.py
app/infra/: token_utils.py
app/models/: User.py  __init__.py  attendance_record.py  college.py  department.py  geofence.py  password_reset_token.py  refresh_tokens.py  used_password_reset_tokens.py  user.py  (+1 more)
(+61 files in other folders)
