[project]
name = "ave"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiomysql>=0.3.2",
    "aioredis>=2.0.1",
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.31.0",
    "boto3>=1.42.92",
    "fastapi>=0.128.2",
    "fastapi-mail>=1.6.1",
    "passlib[bcrypt]>=1.7.4",
    "pillow>=12.2.0",
    "psycopg>=3.3.2",
    "pydantic-settings>=2.12.0",
    "pydantic[email]>=2.12.5",
    "pyjwt[crypto]>=2.11.0",
    "pynanoid>=0.1.1",
    "python-jose[cryptography]>=3.5.0",
    "python-magic>=0.4.27",
    "python-multipart>=0.0.22",
    "redis>=7.1.0",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.40.0",
]
